--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "flyio": "^0.6.14",
+    "qrcodejs2": "0.0.2",
     "qs": "^6.7.0",
     "vant": "^1.6.21",
     "vue": "^2.5.2",
